[gd_scene load_steps=9 format=3 uid="uid://ca4ode1cog4je"]

[ext_resource type="Script" path="res://character.gd" id="1_s7r02"]
[ext_resource type="PackedScene" uid="uid://cbkrux0053i8c" path="res://bar/progress_bar.tscn" id="2_5nwxr"]
[ext_resource type="Resource" uid="uid://12cfv8iouicg" path="res://stamina_resource.tres" id="2_roinp"]
[ext_resource type="Script" path="res://StaminaLoseResource.gd" id="3_cif5q"]
[ext_resource type="Script" path="res://inventory/inventory_ui.gd" id="4_6cpqn"]
[ext_resource type="PackedScene" uid="uid://ct62gqlhtgtlg" path="res://assets/DrugConsumer.glb" id="6_2xxda"]

[sub_resource type="Resource" id="Resource_71j2l"]
script = ExtResource("3_cif5q")
stamina_lose_on_dash = 10.0
stamina_lose_on_sprint = 2.0
stamina_lose_on_walk = 1.0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_2pkr1"]

[node name="Character" type="CharacterBody3D"]
script = ExtResource("1_s7r02")
stamina = ExtResource("2_roinp")
stamina_lose = SubResource("Resource_71j2l")

[node name="inventory_ui" type="Control" parent="." groups=["UI"]]
custom_minimum_size = Vector2(640, 128)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 468.0
offset_top = -43.0
offset_right = -44.0
offset_bottom = -563.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_6cpqn")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_2pkr1")

[node name="DashTimer" type="Timer" parent="."]

[node name="StaminaBar" parent="." groups=["UI"] instance=ExtResource("2_5nwxr")]
show_percentage = false
resource = ExtResource("2_roinp")

[node name="Body" parent="." instance=ExtResource("6_2xxda")]

[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
